# opencraftai-desktop-app

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LauncherView.css  LauncherView.tsx  SettingsModal.css  SettingsModal.tsx
